--- a/cat_site/index.html
+++ b/cat_site/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <title>Cats club in Charlotte</title>
+      <title>Cats club in Charlotte,NC</title>
       <link href="base.css" rel="stylesheet" />
       <link href="styless.css" rel="stylesheet" />
       <script src="time.js" defer></script>
